Fixed gitHub comments.