@@ -3,9 +3,7 @@ package practice;
 import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.OptionalDouble;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Cat;
@@ -35,16 +33,12 @@ public class StreamPractice {
      * But before that subtract 1 from each element on an odd position (having the odd index).
      */
     public Double getOddNumsAverage(List<Integer> numbers) {
-        OptionalDouble average = IntStream.range(0, numbers.size())
+        return IntStream.range(0, numbers.size())
                 .mapToObj(i -> i % 2 == 1 ? numbers.get(i) - 1 : numbers.get(i))
                 .filter(n -> n % 2 != 0)
                 .mapToInt(n -> n)
-                .average();
-        if (average.isPresent()) {
-            return average.getAsDouble();
-        } else {
-            throw new NoSuchElementException();
-        }
+                .average()
+                .orElseThrow(NoSuchElementException::new);
     }
 
     /**
@@ -61,7 +55,7 @@ public class StreamPractice {
         return peopleList.stream()
                 .filter(agePredicate)
                 .filter(sexPredicate)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -80,7 +74,7 @@ public class StreamPractice {
                 = new WorkablePredicate(fromAge, maleToAge, femaleToAge);
         return peopleList.stream()
                 .filter(workablePredicate)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -92,10 +86,9 @@ public class StreamPractice {
         Predicate<Person> femaleFilterPredictor = new FemaleFilterPredicate(femaleAge);
         return peopleList.stream()
                 .filter(femaleFilterPredictor)
-                .map(Person::getCats)
-                .flatMap(List::stream)
+                .flatMap(p -> p.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -116,6 +109,6 @@ public class StreamPractice {
                 .filter(validator)
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
